--- a/React-SquarePlayGround/src/Square.css
+++ b/React-SquarePlayGround/src/Square.css
@@ -1,11 +1,13 @@
 .Square {
-    margin: 20px;
-    position: relative;
+  margin: 20px;
+  position: relative;
+  border: 1px solid purple;
 }
 
 .SquareControls {
-    position: absolute;
-    top: 0;
-    width: 200px;
-    right: -200px;
+  position: absolute;
+  top: 0;
+  width: 300px;
+  left: 300px;
+  border: 1px solid black;
 }
